# pysocha

./: .gitignore  README.md  config.yaml  example.yaml  pyproject.toml  tools.sh
example/: example-config.yaml
example/content/blog_posts/: filenames_are_ignored.md  first_post.md  second_post.md  some_random_name.md  unlisted_post.md
example/content/pages/: index.md  test.md
example/templates/: author.jinja2  authors.jinja2  base.jinja2  blog.jinja2  listing.jinja2  tag.jinja2  tags.jinja2
src/pysocha/: __init__.py  __main__.py  atom.py  build.py  config.py  markdown.py  preview.py
tests/: test_build.py  test_config.py  test_feeds.py  test_markdown.py
