[project]
name = "pysocha"
version = "0.1.0"
description = "Extremely simple static site generator"
authors = [
    { name = "Tod Hansmann", email = "githubpub@todandlorna.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pysocha = 'pysocha:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pysocha"]
